@@ -4,12 +4,13 @@ import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
+import com.ihsmarkit.tfx.core.dl.entity.ParticipantEntity;
 import com.ihsmarkit.tfx.core.dl.entity.TradeEntity;
 import com.ihsmarkit.tfx.eod.service.csv.PositionRebalanceCSVWriter;
 import com.ihsmarkit.tfx.eod.service.csv.PositionRebalanceRecord;
@@ -17,6 +18,7 @@ import com.ihsmarkit.tfx.mailing.client.AwsSesMailClient;
 import com.ihsmarkit.tfx.mailing.model.EmailAttachment;
 
 import lombok.AllArgsConstructor;
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 
 @Service
@@ -29,25 +31,21 @@ public class PositionRebalancePublishingService {
     private final PositionRebalanceCSVWriter csvWriter;
 
     public void publishTrades(final LocalDate businessDate, final List<TradeEntity> trades) {
-        final String subject = String.format("%s rebalance results", businessDate.toString());
         try {
-            getAllParticipantEmails(trades).forEach(email -> {
-                mailClient.sendEmailWithAttachments(
-                    subject,
-                    StringUtils.EMPTY,
-                    Arrays.asList(email.split(",")),
-                    List.of(EmailAttachment.of("positions-rebalance.csv", "text/csv", getPositionRebalanceCsv(trades))));
-            });
+            final Map<@NonNull ParticipantEntity, List<TradeEntity>> participantTradesMap = trades.stream().collect(
+                Collectors.groupingBy(trade -> trade.getOriginator().getParticipant()));
+            participantTradesMap.entrySet().stream()
+                .forEach(entry -> {
+                    mailClient.sendEmailWithAttachments(
+                        String.format("%s rebalance results for %s", businessDate.toString(), entry.getKey().getCode()),
+                        StringUtils.EMPTY,
+                        Arrays.asList(entry.getKey().getNotificationEmail().split(",")),
+                        List.of(EmailAttachment.of("positions-rebalance.csv", "text/csv",
+                            getPositionRebalanceCsv(entry.getValue()))));
+                });
         } catch (final Exception ex) {
             log.error("error while publish position rebalance csv for businessDate: {} with error: {}", businessDate, ex.getMessage());
         }
-    }
-
-    private List<String> getAllParticipantEmails(final List<TradeEntity> trades) {
-        return trades.stream()
-            .flatMap(trade -> Stream.of(trade.getCounterparty().getParticipant().getNotificationEmail(),
-                trade.getOriginator().getParticipant().getNotificationEmail()))
-            .collect(Collectors.toList());
     }
 
     private List<PositionRebalanceRecord> getPositionRebalanceTradesAsRecords(final List<TradeEntity> trades) {
